Fix running with Vector API